# app

./: .gitignore  .gitmodules  .npmrc  .prettierrc.yaml  CONTRIBUTING.md  afterPack.js  afterSign.js  bun.lockb  capacitor.config.ts  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.js  eslint.config.mjs  eslint.config.ts  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json  tsconfig.web.json  turbo.json  vite.config.ts
.github/: tauri.yml
.github/workflows/: tauri.yml
android/: capacitor.settings.gradle
android/app/: build.gradle
ios/App/: Podfile
netlify/edge-functions/: meta-preview.ts
netlify/edge_functions/: meta-preview.ts
public/: manifest.json  splashscreen.css  splashscreen.html
resources/: installer.nsh
resources/icons/: icon.icns
scripts/: tauriVersion.js
src/: Logger.ts  api.ts  client.tsx  emotion.d.ts  global.d.ts  index.d.ts  main.tsx  routeTree.gen.ts  router.tsx  seo.ts  server.ts  start.ts  utils.ts  utils.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  version.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/adaptive-dark/: icon.icns
src-tauri/icons/adaptive-light/: icon.icns
src-tauri/icons/base/: icon.icns
src-tauri/icons/dark/: icon.icns
src-tauri/icons/light/: icon.icns
src-tauri/src/: gateway.rs  lib.rs  main.rs  presence.rs  tray.rs  updater.rs
src-tauri/src/erlpack/: json.rs  mod.rs
src/components/: APIErrorListener.tsx  AdaptStatusBar.tsx  AppHotkeys.tsx  Avatar.tsx  BottomNavigation.tsx  Button.tsx  ContextItem.tsx  ContextMenu.tsx  ContextSubmenu.tsx  CropperClient.tsx  DOBInput.tsx  DownloadButton.tsx  IconButton.tsx  InjectGlobal.tsx  InputWIthLabel.tsx  Link.tsx  ListSection.tsx  Loader.tsx  Loading.tsx  Logo.tsx  ModalRoot.tsx  ModeSwitcher.tsx  Navigation.component.tsx  NavigationTracker.tsx  Paper.tsx  PlaygroundLeftSidebar.tsx  SidebarPill.tsx  SmallActivityStatus.tsx  StatusBadge.tsx  ThemeCreator.old.tsx  ThemeCreator.tsx  ThemeSelector.tsx  ThemeSwitcher.tsx  TooltipWrapper.tsx  TopNavigation.tsx  UpdatingOverlay.tsx  UserDrawer.tsx  WindowTitleBar.tsx  WindowTitlebar.tsx
src/contexts/: AppTheme.context.tsx  ContextMenu.context.tsx  DesktopShell.context.tsx  Modal.context.tsx  SettingsSidebar.context.tsx  SpaceSettings.context.tsx  SpaceSettingsSidebar.context.tsx  ThemeCreator.context.tsx  ThemeManager.tsx  UserSettings.context.tsx  UserSettingsSidebar.context.tsx  UserSidebar.context.tsx
src/css/: spoilerStyles.ts
src/hooks/: useColorInput.ts  useDraft.ts  useGlobalHotkeys.ts  usePrefersDark.ts  useStores.hook.ts  useStores.ts  useTheme.ts
src/main/: bootstrapper.ts  codec.ts  displayMedia.ts  index.ts  ipc.ts  processCache.ts  protocols.ts  rpc.ts  tray.ts  updater.ts  windows.ts
src/preload/: index.d.ts  index.ts
src/presence/: gamePresence.ts
src/renderer/: index.html
src/routes/: __root.tsx  _authenticated.tsx  download.tsx  index.lazy.tsx  index.tsx  login.tsx  playgroud.lazy.tsx  playground.lazy.tsx  privacy.tsx  register.tsx  ui.lazy.tsx  ui.tsx
src/storages/: expressionBlobStorage.ts  idbStorage.ts  indexedDb.ts  safeLocalStorage.ts  safeSecureStorage.ts
src/stores/: Account.store.ts  AccountSettings.store.ts  App.store.ts  Channel.store.ts  CustomStatus.store.ts  Draft.store.ts  Expressions.store.ts  Gateway.store.ts  Message.store.ts  MessageQueue.store.ts  Navigation.store.ts  Presence.store.ts  REST.store.ts  (+8 more)
(+1106 files in other folders)
