[package]
name = "mutualzz"
version = "1.5.0"
description = "Mutualzz is a social media app for everyone :3"
authors = ["Azrael"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mutualzz"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.8.2", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tauri-plugin-os = "2.3.1"
tauri-plugin-process = "2.3.0"
tauri-plugin-notification = "2.3.0"
tauri-plugin-log = "2.6.0"
url = "2.5.4"
chrono = "0.4.41"
log = "0.4.27"
reqwest = { version = "0.12.23", default-features = false, features = [
	"json",
	"rustls-tls",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.0"
tauri-plugin-single-instance = "2.3.2"
tauri-plugin-updater = "2.9.0"

