[package]
name = "mutualzz"
version = "2.3.0"
description = "Mutualzz is a social media app for everyone :3"
authors = ["Azrael"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mutualzz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = ["tray-icon", "image-ico", "image-png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri-plugin-os = "2.3.2"
tauri-plugin-process = "2.3.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-log = "2.7.1"
chrono = "0.4.42"
log = "0.4.28"
eetf = "0.11"
anyhow = "1.0.100"
base64 = "0.22.1"
num-bigint = "0.4.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.3.6"
tauri-plugin-updater = "2.9.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

